--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "serve:qa": "cross-env QA_ENV=true gatsby serve --prefix-paths",
     "serve:noCache": "gatsby clean && gatsby build && gatsby serve",
     "clean": "gatsby clean",
-    "gh-pages-script": "gh-pages -d public -r https://$GH_TOKEN@github.com/researchdata-sheffield/dataviz-hub2.git",
-    "gh-pages-script:qa": "rm -f public/CNAME && gh-pages -d public -b main -r https://$GH_TOKEN@github.com/researchdata-sheffield/dataviz-hub2-qa.git",
+    "gh-pages-script": "gh-pages -d public -r https://$GH_TOKEN@github.com/yld-weng/dataviz-hub2-test.git",
+    "gh-pages-script:qa": "gh-pages -d public -b gh-pages -r https://$GH_TOKEN@github.com/yld-weng/dataviz-hub2-test.git",
     "deploy": "npm run build && npm run gh-pages-script",
     "deploy:noCache": "gatsby clean && npm run deploy",
     "deploy:qa": "npm run build:qa && npm run gh-pages-script:qa",
