--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
       
-      - uses: actions/checkout@v2 
+      - name: Pull release commits
+        run: git pull
         
       - name: Deploy
         run: npm run deploy:qa
