--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,12 +52,9 @@ jobs:
           git config --local user.name "github-actions-bot"
 
       - name: Semantic Release
-        run: npx semantic-release
+        run: HUSKY=0 npx semantic-release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      
-      - name: Pull release commits
-        run: git pull
         
       - name: Deploy
         run: npm run deploy:qa
