--- a/.releaserc
+++ b/.releaserc
@@ -9,12 +9,32 @@
     { "name": "alpha", "prerelease": true }
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    ["@semantic-release/commit-analyzer", {
+      "preset": "angular",
+      "releaseRules": [
+        {"type": "feat", "release": "minor"},
+        {"type": "fix", "release": "patch"},
+        {"type": "perf", "release": "patch"},
+        {"type": "docs", "scope": "README", "release": "patch"},
+        {"type": "docs", "scope": "new-*", "release": "minor"},
+        {"type": "refactor", "scope": "core-*", "release": "minor"},
+        {"type": "refactor", "release": "patch"},
+        {"type": "style", "release": "patch"},
+        {"type": "test", "release": "patch"},
+        {"type": "chore", "release": "patch"},
+        {"breaking": true, "release": "major"},
+        {"revert": true, "release": "patch"},
+        {"scope": "no-release", "release": false}
+      ],
+      "parserOpts": {
+        "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
+      }
+    }],
     "@semantic-release/release-notes-generator",
     [
       "@semantic-release/changelog",
       {
-        "changelogFile": "src/pages/CHANGELOG.mdx"
+        "changelogFile": "CHANGELOG.mdx"
       }
     ],
     [
@@ -28,7 +48,7 @@
       "@semantic-release/git",
       {
         "assets": [
-          "src/**/*",
+          "CHANGELOG.mdx",
           "package.json",
           "package-lock.json",
           "npm-shrinkwrap.json"
