--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,10 @@ jobs:
         run: HUSKY=0 npx semantic-release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIT_AUTHOR_NAME: "github-actions-bot"
+          GIT_AUTHOR_EMAIL: "support+actions@github.com"
+          GIT_COMMITTER_NAME: "github-actions-bot"
+          GIT_COMMITTER_EMAIL: "support+actions@github.com"
         
       - name: Deploy
         run: npm run deploy:qa
