--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "Promoting and building community around data visualisation at the University of Sheffield",
   "version": "1.8.2",
-  "author": "Yu Liang Weng <y.weng@sheffield.ac.uk>", 
+  "author": "Yu Liang Weng <y.weng@sheffield.ac.uk>",
   "scripts": {
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "build": "gatsby build --log-pages",
@@ -11,7 +11,7 @@
     "build:noCache": "gatsby clean && gatsby build --log-pages",
     "build:noGA": "cross-env QA_ENV=true gatsby build --log-pages",
     "develop": "gatsby develop",
-    "develop:noCache": "gatsby clean && gatsby develop", 
+    "develop:noCache": "gatsby clean && gatsby develop",
     "lint": "npx lint-staged",
     "test": "jest --testPathIgnorePatterns \".*/.+(e2e|ignore).+(ts|js)\"",
     "test:ci": "npm run test -- --ci --coverage",
@@ -131,6 +131,7 @@
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.3.1",
     "babel-preset-gatsby": "^2.2.0",
+    "conventional-changelog-conventionalcommits": "^4.6.3",
     "cssnano": "5.0.11",
     "eslint": "^8.3.0",
     "eslint-loader": "4.0.2",
