--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Semantic Release
         run: HUSKY=0 npx semantic-release
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_AUTHOR_NAME: "github-actions-bot"
           GIT_AUTHOR_EMAIL: "support+actions@github.com"
           GIT_COMMITTER_NAME: "github-actions-bot"
