--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -32,3 +32,35 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_CLOUD }}
+
+  Post-Notification:
+    runs-on: windows-2019
+    needs: scan
+    # https://docs.github.com/en/actions/learn-github-actions/contexts#needs-context
+    if: ${{ github.event_name != 'schedule' && always() && (needs.scan.result == 'failure' || needs.scan.result == 'success') }}
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Webhook
+        # https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
+        run: |
+          curl --write-out '%{http_code}' \
+          --silent \
+          -- output /dev/null \
+          --request POST \
+          --header 'authorization: Basic ${{ secrets.WEBHOOK_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --url ${{ secrets.WEBHOOK_URL }} \
+          --data '{ \
+            "origin": "GitHub", \
+            "project": "dataviz-hub", \
+            "commit_title": "New release", \
+            "commit_message": "${{ github.event.commits[0].message }}", \
+            "commit_sha": ${{ github.sha }} \
+            "outcome": "${{ needs.scan.result }}", \
+            "run_url": "https://github.com/researchdata-sheffield/dataviz-hub2/actions/runs/${{ github.run_id }}", \
+            "impact": "Low", \
+            "benefit": "New release" \
+          }' 
+        
