--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -50,15 +50,15 @@ jobs:
           --header 'Authorization: Basic ${{ secrets.WEBHOOK_TOKEN }}' \
           --header 'Content-Type: application/json' \
           --url '${{ secrets.WEBHOOK_URL }}' \
-          --data '"{ \
-            "origin": "GitHub", \
-            "project": "dataviz-hub", \
-            "commit_title": "New release", \
-            "commit_message": "${{ github.event.commits[0].message }}", \
-            "commit_sha": "${{ github.sha }}", \
-            "outcome": "${{ needs.scan.result }}", \
-            "run_url": "https://github.com/researchdata-sheffield/dataviz-hub2/actions/runs/${{ github.run_id }}", \
-            "impact": "Low", \
-            "benefit": "New release" \
-          }"'
+          --data '{
+            "origin": "GitHub",
+            "project": "dataviz-hub",
+            "commit_title": "New release",
+            "commit_message": "${{ github.event.commits[0].message }}",
+            "commit_sha": "${{ github.sha }}",
+            "outcome": "${{ needs.scan.result }}",
+            "run_url": "https://github.com/researchdata-sheffield/dataviz-hub2/actions/runs/${{ github.run_id }}",
+            "impact": "Low",
+            "benefit": "New release"
+          }'
         
